@@ -257,6 +257,7 @@
 	- fix: add epoch to "already installed" check.
 	- check for interrupt during iteration.
 	- python: add ts.setProbFilter() method, remove ts.run() argument.
+	- fix: region trailer offset sanity check wrong (#71996).
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
